# media_common

./: BUILD.gn  README.md  audio_codec_property.cc  audio_codec_property.h  avc_utils.cc  avc_utils.h  buffer.cc  buffer.h  channel_layout.cc  channel_layout.h  codec_constants.h  codec_id.h  color_utils.cc  color_utils.h  esds.cc  esds.h  handler.cc  handler.h  handler_roster.cc  handler_roster.h  hevc_utils.cc  hevc_utils.h  looper.cc  looper.h  media_buffer.cc  media_buffer.h  media_defs.h  media_errors.h  media_packet.cc  media_packet.h  media_source.h  media_utils.cc  media_utils.h  message.cc  message.h  meta_data.cc  meta_data.h  meta_data_utils.cc  meta_data_utils.h  pixel_format.h  (+4 more)
audio/: BUILD.gn  audio.h  audio_device_factory.h  audio_format.h  audio_record.h  audio_track.h  channel_layout.cc  channel_layout.h  default_audio_device_factory.cc  default_audio_device_factory.h
audio/alsa/: alsa_audio_device_factory.cc  alsa_audio_device_factory.h  alsa_audio_record.cc  alsa_audio_record.h  alsa_audio_track.cc  alsa_audio_track.h
codec/: BUILD.gn  audio_codec_property.cc  audio_codec_property.h  codec.h  codec_buffer.cc  codec_buffer.h  codec_constants.h  codec_factory.cc  codec_factory.h  codec_id.cc  codec_id.h  video_codec_property.cc  video_codec_property.h
codec/ffmpeg/: BUILD.gn  ffmpeg_codec.cc  ffmpeg_codec.h  ffmpeg_codec_example.cc  ffmpeg_codec_factory.cc  ffmpeg_codec_factory.h  ffmpeg_codec_utils.cc  ffmpeg_codec_utils.cc.bak  ffmpeg_codec_utils.h
crypto/: crypto.h
foundation/: BUILD.gn  Lookup.h  av_synchronize_render.h  avc_utils.cc  avc_utils.h  bit_reader.cc  bit_reader.h  buffer.cc  buffer.h  buffer2.cc  buffer2.h  color_utils.cc  color_utils.h  esds.cc  esds.h  handler.cc  handler.h  handler_roster.cc  handler_roster.h  hevc_utils.cc  hevc_utils.h  looper.cc  looper.h  media_buffer.cc  media_buffer.h  media_clock.cc  media_clock.h  media_defs.cc  media_defs.h  media_errors.h  media_format.cc  media_format.h  media_packet.cc  media_packet.h  media_source.cc  media_source.h  media_utils.cc  media_utils.h  message.cc  message.h  (+3 more)
foundation/test/: BUILD.gn  media_clock_test.cc  media_packet_unittest.cc
hardware/: video_api.h
media/hardware/: video_api.h
test/: BUILD.gn  media_packet_unittest.cc
video/: video_render.h
