import("//base/build/ave.gni")

ave_source_set("handler") {
  sources = [
    "handler.cc",
    "handler.h",
    "handler_roster.cc",
    "handler_roster.h",
    "looper.cc",
    "looper.h",
    "message.cc",
    "message.h",
  ]
}

ave_library("avc_util") {
  sources = [
    "avc_utils.cc",
    "avc_utils.h",
  ]
}

ave_library("hevc_util") {
  sources = [
    "hevc_utils.cc",
    "hevc_utils.h",
  ]
}

ave_library("media_utils") {
  sources = [
    "media_source.h",
    "media_utils.cc",
  ]
}

ave_library("media_packet") {
  sources = [
    "media_packet.cc",
    "media_packet.h",
  ]
  deps = [ "//base/units" ]
}

ave_library("esds") {
  sources = [
    "esds.cc",
    "esds.h",
  ]
}

ave_library("color_utils") {
  sources = [
    "color_utils.cc",
    "color_utils.h",
  ]
}

ave_library("bit_reader") {
  sources = [
    "bit_reader.cc",
    "bit_reader.h",
  ]
}

ave_library("foundation") {
  sources = [ "media_source.h" ]
  deps = [
    ":bit_reader",
    ":color_utils",
    ":esds",
    ":handler",
    ":media_packet",
    ":media_utils",
  ]
}

# Tests
#
ave_library("unittest_sources") {
  testonly = true
  deps = [ "test:media_packet_test" ]
}

executable("media_foundation_unittests") {
  testonly = true
  deps = [
    ":unittest_sources",
    "//test:test_main",
    "//test:test_support",
  ]
}
