import("//base/build/ave.gni")

group("test") {
  testonly = true
  deps = [ ":looper_test" ]
}

executable("looper_test") {
  visibility = [ "*" ]
  testonly = true
  sources = [ "looper_test.cpp" ]

  deps = [
    "..:foundation",
    "//test:test_support",
  ]
}

ave_source_set("media_packet_test") {
  testonly = true
  sources = [ "media_packet_unittest.cc" ]
  deps = [
    "..:media_packet",
    "//test:test_support",
  ]
}
